tests/test-files/parse-let.txt
================================================================================
1 Parse let
================================================================================

(package coalton-unit-tests)

(define x
  (let ((y 5))
    y))

================================================================================
2 Parse let
================================================================================

(package coalton-unit-tests)

(define x
  (let ()
    5))

================================================================================
3 Parse named let
================================================================================

(package coalton-unit-tests)

(define x
  (let fact ((n 5))
    (if (coalton-prelude:== n 1)
        1
        (coalton-prelude:* n (fact (coalton-prelude:1- n))))))

================================================================================
4 Parse named let
================================================================================

(package coalton-unit-tests)

(define x
  (let fact ((n 5) (acc 1))
    (if (coalton-prelude:== n 1)
        acc
        (fact (coalton-prelude:1- n) (coalton-prelude:* acc n)))))

================================================================================
100 Missing binding list
================================================================================

(package test-package)

(define f (let))

--------------------------------------------------------------------------------

error: Malformed let
  --> test:3:14
   |
 3 |  (define f (let))
   |                ^ expected let binding list

================================================================================
101 Missing let body
================================================================================

(package test-package)

(define f (let ()))

--------------------------------------------------------------------------------

error: Malformed let
  --> test:3:17
   |
 3 |  (define f (let ()))
   |                   ^ expected let body

================================================================================
102 Malformed let
================================================================================

(package test-package)

(define f (let x 5))

--------------------------------------------------------------------------------

error: Malformed let
  --> test:3:15
   |
 3 |  (define f (let x 5))
   |                 ^ expected binding list

================================================================================
103 Malformed let binding
================================================================================

(package test-package)

(define x
  (let ((y 2 . 3))
   (* 2 y)))

--------------------------------------------------------------------------------

error: Malformed let binding
  --> test:4:8
   |
 4 |    (let ((y 2 . 3))
   |          ^^^^^^^^^ unexpected dotted list

================================================================================
104 Malformed let binding
================================================================================

(package test-package)

(define f
 (let ((x)) 5))

--------------------------------------------------------------------------------

error: Malformed let binding
  --> test:4:9
   |
 4 |   (let ((x)) 5))
   |           ^ let bindings must have a value

================================================================================
105 Malformed let binding
================================================================================

(package test-package)

(define f
  (let (x) 5))

--------------------------------------------------------------------------------

error: Malformed let binding
  --> test:4:8
   |
 4 |    (let (x) 5))
   |          ^ expected list

================================================================================
106 Malformed let binding
================================================================================

(package test-package)

(define f
  (let ((x y z)) 5))

--------------------------------------------------------------------------------

error: Malformed let binding
  --> test:4:13
   |
 4 |    (let ((x y z)) 5))
   |               ^ unexpected trailing form

================================================================================
107 Malformed declare
================================================================================

(package test-package)

(define x
  (let ((declare x (T -> T) 5))
   "x"))

--------------------------------------------------------------------------------

error: Malformed declare
  --> test:4:28
   |
 4 |    (let ((declare x (T -> T) 5))
   |                              ^ unexpected form

================================================================================
108 Invalid variable
================================================================================

(package test-package)

(define x
  (let ((declare 5 (T -> T)))
   "x"))

--------------------------------------------------------------------------------

error: Invalid variable
  --> test:4:17
   |
 4 |    (let ((declare 5 (T -> T)))
   |                   ^ expected identifier
